--- a/thesis/5-analyse-lasso-og-results.Rmd
+++ b/thesis/5-analyse-lasso-og-results.Rmd
@@ -61,7 +61,6 @@ in the training phase.
 <!-- ``` -->
 
 
-
 ```{r}
 err_bars_plot <- readRDS(paste0(path_to_model_folder, "/err-mat-plots/err-bars-plot.rds"))
 err_bars_plot
@@ -90,17 +89,17 @@ The highest regularization is chosen so that all coefficients are zero.
 <!-- #bmin is 40 -->
 <!-- #w ist bei 45 true -->
 <!-- l1se <- 45 -->
-
 <!-- ``` -->
 
 
 
 ```{r}
-p1 <- readRDS("../results/CV-lasso/cv-lasso-og-data-16-06-22/err-mat-plots/err-plot-fold-1.rds")
-p2 <- readRDS("../results/CV-lasso/cv-lasso-og-data-16-06-22/err-mat-plots/err-plot-fold-2.rds")
-p3 <- readRDS("../results/CV-lasso/cv-lasso-og-data-16-06-22/err-mat-plots/err-plot-fold-3.rds")
-p4 <- readRDS("../results/CV-lasso/cv-lasso-og-data-16-06-22/err-mat-plots/err-plot-fold-4.rds")
-p5 <- readRDS("../results/CV-lasso/cv-lasso-og-data-16-06-22/err-mat-plots/err-plot-fold-5.rds")
+p1 <- readRDS(paste0(path_to_model_folder, "err-mat-plots/err-plot-fold-1.rds"))
+p2 <- readRDS(paste0(path_to_model_folder, "err-mat-plots/err-plot-fold-2.rds"))
+p3 <- readRDS(paste0(path_to_model_folder, "err-mat-plots/err-plot-fold-3.rds"))
+p4 <- readRDS(paste0(path_to_model_folder, "err-mat-plots/err-plot-fold-4.rds"))
+p5 <- readRDS(paste0(path_to_model_folder, "err-mat-plots/err-plot-fold-5.rds"))
+
 p1 + p2 + p3 + p4 + p5
 ```
 
@@ -113,24 +112,24 @@ does not increase the error dramatically as seen for example in folds 2 and 5 re
 
 Below we can see the minimum MSE for each fold.
 ```{r}
-apply(err_mat, 2, min)
+#apply(err_mat, 2, min)
 ```
 And which lambda in the lambda vector resulted in the lowest prediction error on the folds´ test set.
 
 ```{r}
-apply(err_mat, 2, function(x) which.min(x))
+#apply(err_mat, 2, function(x) which.min(x))
 ```
-
-
 
 ## Coefficient plots
 
 ```{r}
-pc1 <- readRDS("../results/CV-lasso/cv-lasso-og-data-16-06-22/coef-plots/coef-plot-fold-1.rds")
-pc2 <- readRDS("../results/CV-lasso/cv-lasso-og-data-16-06-22/coef-plots/coef-plot-fold-2.rds")
-pc3 <- readRDS("../results/CV-lasso/cv-lasso-og-data-16-06-22/coef-plots/coef-plot-fold-3.rds")
-pc4 <- readRDS("../results/CV-lasso/cv-lasso-og-data-16-06-22/coef-plots/coef-plot-fold-4.rds")
-pc5 <- readRDS("../results/CV-lasso/cv-lasso-og-data-16-06-22/coef-plots/coef-plot-fold-5.rds")
+pc1 <- readRDS(paste0(path_to_model_folder, "coef-plots/coef-plot-fold-1.rds"))
+pc2 <- readRDS(paste0(path_to_model_folder, "coef-plots/coef-plot-fold-2.rds"))
+pc3 <- readRDS(paste0(path_to_model_folder, "coef-plots/coef-plot-fold-3.rds"))
+pc4 <- readRDS(paste0(path_to_model_folder, "coef-plots/coef-plot-fold-4.rds"))
+pc5 <- readRDS(paste0(path_to_model_folder, "coef-plots/coef-plot-fold-5.rds"))
+
+
 
 l <- list(pc1,pc2,pc3,pc4,pc5)
 ggarrange(plotlist = l, ncol = 3, nrow = 2,
@@ -144,122 +143,10 @@ The LASSO chooses among correlated variables only one and discards the others,
 which can be seen here since the variables chosen are scattered across the map and can but don't have to be close to each other.
 
 
-```{r}
-# q <- ggplot_build(pc1)
-# q$data[[1]]$linetype <- 21
-# pc1$layers[[2]]$aes_params$shape <- 21
-# pc1$data
-# pc1$layers[[2]]
-# q <- ggplot_gtable(q)
-# plot(q)
-# 
-# q <- ggplot_build(pc1)
-```
-
-
-
 ## Inspect predictions from each fold
 
 Following we inspect the folds precipitation time series and
 the predictions made by the model.
-
-<!-- ```{r} -->
-<!-- # load data -->
-<!-- target_path <- "../data/interim/drought/chirps_setreftime_aggregated.rds" -->
-<!-- features_path <- "../data/interim/sst/ersst_setreftime.nc" -->
-<!-- target <- load_data(target_path) -->
-<!-- target <- apply(getValues(target), 2, mean) -->
-<!-- features <- load_data(features_path, "sst") -->
-<!-- features <- t(features) -->
-<!-- features <- prepare_sst(features) -->
-<!-- ``` -->
-
-<!-- ```{r} -->
-<!-- #plot(ts(target)) -->
-<!-- ``` -->
-
-
-<!-- ```{r} -->
-<!-- # get indices -->
-<!-- lambdas <- readRDS("../results/CV-lasso/cv-lasso-og-data-16-06-22/lambda-vec.rds") -->
-<!-- ids <- readRDS("../results/CV-lasso/cv-lasso-og-data-16-06-22/index-list.rds") -->
-<!-- ``` -->
-
-
-<!-- ```{r} -->
-<!-- f1_train <- ids$train$Training060 -->
-<!-- f1_test <- ids$test$Testing060 -->
-<!-- x1_train <- features[f1_train,] -->
-<!-- y1_train <- target[f1_train] -->
-<!-- x1_test <- features[f1_test,] -->
-<!-- y1_test <- target[f1_test] -->
-<!-- min1 <- which.min(err_mat[,1]) -->
-<!-- m1 <- glmnet(x1_train, y1_train, lambda=rev(lambdas)[min1], standardize = FALSE) -->
-<!-- preds1 <- predict(object = m1, newx = x1_test) -->
-<!-- df <- data.frame(preds = preds1, target = y1_test, check.names=TRUE) -->
-<!-- ggplot() + geom_line(data = df, mapping = aes(x=1:14, y=s0, colour = "blue")) + -->
-<!--   geom_line(data = df, mapping= aes(x=1:14, y=target)) -->
-<!-- ``` -->
-
-<!-- ```{r} -->
-<!-- f2_train <- ids$train$Training134 -->
-<!-- f2_test <- ids$test$Testing134 -->
-<!-- x2_train <- features[f2_train,] -->
-<!-- y2_train <- target[f2_train] -->
-<!-- x2_test <- features[f2_test,] -->
-<!-- y2_test <- target[f2_test] -->
-<!-- min2 <- which.min(err_mat[,2]) -->
-<!-- m2 <- glmnet(x2_train, y2_train, lambda=rev(lambdas)[min2], standardize = FALSE) -->
-<!-- preds2 <- predict(m2, newx = x2_test) -->
-<!-- df <- data.frame(preds = preds2, target = y2_test) -->
-<!-- ggplot() + geom_line(data = df, mapping = aes(x=1:14, y=s0, colour = "blue")) + -->
-<!--   geom_line(data = df, mapping= aes(x=1:14, y=target)) -->
-<!-- ``` -->
-<!-- ```{r} -->
-<!-- f3_train <- ids$train$Training208 -->
-<!-- f3_test <- ids$test$Testing208 -->
-<!-- x3_train <- features[f3_train,] -->
-<!-- y3_train <- target[f3_train] -->
-<!-- x3_test <- features[f3_test,] -->
-<!-- y3_test <- target[f3_test] -->
-<!-- min3 <- which.min(err_mat[,3]) -->
-<!-- m3 <- glmnet(x3_train, y3_train, lambda=rev(lambdas)[min3], standardize = FALSE) -->
-<!-- preds3 <- predict(m3, newx = x3_test) -->
-<!-- df <- data.frame(preds = preds3, target = y3_test) -->
-<!-- ggplot() + geom_line(data = df, mapping = aes(x=1:14, y=s0, colour = "blue")) + -->
-<!--   geom_line(data = df, mapping= aes(x=1:14, y=target)) -->
-<!-- ``` -->
-<!-- ```{r} -->
-<!-- f4_train <- ids$train$Training282 -->
-<!-- f4_test <- ids$test$Testing282 -->
-<!-- x4_train <- features[f4_train,] -->
-<!-- y4_train <- target[f4_train] -->
-<!-- x4_test <- features[f4_test,] -->
-<!-- y4_test <- target[f4_test] -->
-<!-- min4 <- which.min(err_mat[,4]) -->
-<!-- m4 <- glmnet(x4_train, y4_train, lambda=rev(lambdas)[min4], standardize = FALSE) -->
-<!-- preds4 <- predict(m4, newx = x4_test) -->
-<!-- df <- data.frame(preds = preds4, target = y4_test) -->
-<!-- ggplot() + geom_line(data = df, mapping = aes(x=1:14, y=s0, colour = "blue")) + -->
-<!--   geom_line(data = df, mapping= aes(x=1:14, y=target)) -->
-<!-- ``` -->
-
-<!-- ```{r} -->
-<!-- f5_train <- ids$train$Training356 -->
-<!-- f5_test <- ids$test$Testing356 -->
-<!-- x5_train <- features[f5_train,] -->
-<!-- y5_train <- target[f5_train] -->
-<!-- x5_test <- features[f5_test,] -->
-<!-- y5_test <- target[f5_test] -->
-<!-- min5 <- which.min(err_mat[,5]) -->
-<!-- m5 <- glmnet(x5_train, y5_train, lambda=rev(lambdas)[min5], standardize = FALSE) -->
-<!-- preds5 <- predict(m5, newx = x5_test) -->
-<!-- df <- data.frame(preds = preds5, target = y5_test) -->
-<!-- ggplot() + geom_line(data = df, mapping = aes(x=1:14, y=s0, colour = "blue")) + -->
-<!--   geom_line(data = df, mapping= aes(x=1:14, y=target)) -->
-<!-- ``` -->
-
-
 
 ```{r}
 pred_plot_1 <- readRDS(paste0(path_to_model_folder, "/pred-plots/pred-plot-fold-1.rds"))
