--- a/thesis/5a-lasso-cluster-1.Rmd
+++ b/thesis/5a-lasso-cluster-1.Rmd
@@ -1,4 +1,4 @@
-# Lasso on original data
+# Lasso on cluster 1
 
 ```{r, echo = FALSE}
 knitr::opts_chunk$set(warning = FALSE, message = FALSE, echo = FALSE)
@@ -15,7 +15,7 @@ source("../code/R/helper-functions.R")
 ```
 
 ```{r}
-path_to_model_folder <- "../results/CV-lasso/cluster-cv-lasso-og/cluster-5/"
+path_to_model_folder <- "../results/CV-lasso/cluster-cv-lasso-og2/cluster-1/"
 ```
 
 
@@ -38,14 +38,27 @@ in the training phase.
 
 ## Error plots
 
-
 ```{r}
+err_mat <- readRDS(paste0(path_to_model_folder, "/err-mat.rds"))
+lambdas <- readRDS(paste0(path_to_model_folder, "/lambda-vec.rds"))
+```
+
+```{r err-bar-plot-lasso-og-cl1, fig.cap="Mean squared error of the 5-fold blocked cross validation for cluster 1. On the x-axis the lambda values on the log scale. The points in the middle represent the average MSE for the respective lambda, the errorbars give the MSE +/- one standard deviation. The dotted line shows the lambda for which minimum MSE was obtained."}
 err_bars_plot <- readRDS(paste0(path_to_model_folder, "/err-mat-plots/err-bars-plot.rds"))
 err_bars_plot
 ```
+\@ref(fig:err-bar-plot-lasso-og-cl1) shows the results from the 5 fold-CV plotted for each lambda. The lambdas are given on the log scale.
+The upper and lower bars indicate mean MSE +/- one standard deviation from the
+mean MSE. 
+We note that the upper and lower bars are quite wide indicating big differences
+in MSE for the different folds, just as in the unclustered case,
+the minimum average MSE is obtained at a higher lambda value.
+Again we also inspect the MSE for each individual fold.
 
 
-```{r}
+
+
+```{r err-fold-lasso-og-cl1, fig.cap="MSE of the CV for the different lambda values on the a log scale. The red dotted line shows the lambda for which minimum MSE was obtained."}
 p1 <- readRDS(paste0(path_to_model_folder, "err-mat-plots/err-plot-fold-1.rds"))
 p2 <- readRDS(paste0(path_to_model_folder, "err-mat-plots/err-plot-fold-2.rds"))
 p3 <- readRDS(paste0(path_to_model_folder, "err-mat-plots/err-plot-fold-3.rds"))
@@ -54,8 +67,18 @@ p5 <- readRDS(paste0(path_to_model_folder, "err-mat-plots/err-plot-fold-5.rds"))
 
 p1 + p2 + p3 + p4 + p5
 ```
+The trajectories in \@ref(fig:err-fold-lasso-og-cl1) are quite similar in fold 1
+4 and 5, but quite different from fold 2 and 3.
+The chosen values of regularisation differ between the folds.
 
+```{r}
+err_mat_list <- list(p1,p2,p3,p4,p5)
+err_mat_resc_list <- replot_err_mat(err_mat_list)
+```
 
+```{r err-fold-lasso-og-replot-cl1, fig.cap="MSE of the CV for the different lambda values on the a log scale computed for cluster 1. The red dotted line shows the lambda for which minimum MSE was obtained. See @\ref(fig:err-folg-lasso-og), but this time the y-axis has the same range for all plots."}
+err_mat_resc_list[[1]] + err_mat_resc_list[[2]] + err_mat_resc_list[[3]] + err_mat_resc_list[[4]] + err_mat_resc_list[[5]]
+```
 
 Below we can see the minimum MSE for each fold.
 ```{r}
@@ -71,7 +94,7 @@ And which lambda in the lambda vector resulted in the lowest prediction error on
 
 ## Coefficient plots
 
-```{r}
+```{r coef-plot-lasso-og-cl1, fig.cap="Coefficient map plot for the different folds. Longitude and Latitude on the x and y-axis respectively. Positive values are coloured in blue, negative values in red."}
 pc1 <- readRDS(paste0(path_to_model_folder, "coef-plots/coef-plot-fold-1.rds"))
 pc2 <- readRDS(paste0(path_to_model_folder, "coef-plots/coef-plot-fold-2.rds"))
 pc3 <- readRDS(paste0(path_to_model_folder, "coef-plots/coef-plot-fold-3.rds"))
@@ -125,18 +148,8 @@ as validation data
 ```{r}
 full_preds <- readRDS(paste0(path_to_model_folder, "/pred-plots/pred-plot-full.rds"))
 full_preds
-```
-```{r}
-# [1] 1616.594
-# [1] "Done fitting and evaluating the full model with l_min for cluster 1"
-# [1] 1250.799
-# [1] "Done fitting and evaluating the full model with l_min for cluster 2"
-# [1] 3091.448
-# [1] "Done fitting and evaluating the full model with l_min for cluster 3"
-# [1] 3505.33
-# [1] "Done fitting and evaluating the full model with l_min for cluster 4"
-# [1] 2599.921
-# [1] "Done fitting and evaluating the full model with l_min for cluster 5"
+mse_full <- get_mse_from_pred_plot(full_preds)
+mse_full
 ```
 
 
