--- a/thesis/5f-lasso-with-lags.Rmd
+++ b/thesis/5f-lasso-with-lags.Rmd
@@ -1,4 +1,4 @@
-# Lasso on original data
+# lasso with lags
 
 ```{r, echo = FALSE}
 knitr::opts_chunk$set(warning = FALSE, message = FALSE, echo = FALSE)
@@ -22,7 +22,7 @@ source("../code/R/helper-functions.R")
 # length(ids$test$Testing060)
 ```
 ```{r}
-path_to_model_folder <- "../results/CV-lasso/cv-lasso-og-data-16-06-22"
+path_to_model_folder <- "../results/CV-lasso/cv-lasso-og-timelag-25-06-22-rm4"
 ```
 
 
@@ -144,15 +144,15 @@ apply(err_mat, 2, function(x) lambdas[which.min(x)])
 ## Coefficient plots
 
 ```{r coef-plot-lasso-og, fig.cap="Coefficient map plot for the different folds. Longitude and Latitude on the x and y-axis respectively. Positive values are coloured in blue, negative values in red."}
-pc1 <- readRDS(paste0(path_to_model_folder, "/coef-plots/coef-plot-fold-1.rds"))
-pc2 <- readRDS(paste0(path_to_model_folder, "/coef-plots/coef-plot-fold-2.rds"))
-pc3 <- readRDS(paste0(path_to_model_folder, "/coef-plots/coef-plot-fold-3.rds"))
-pc4 <- readRDS(paste0(path_to_model_folder, "/coef-plots/coef-plot-fold-4.rds"))
-pc5 <- readRDS(paste0(path_to_model_folder, "/coef-plots/coef-plot-fold-5.rds"))
-
-l <- list(pc1,pc2,pc3,pc4,pc5)
-ggarrange(plotlist = l, ncol = 3, nrow = 2,
-         common.legend = TRUE)
+# pc1 <- readRDS(paste0(path_to_model_folder, "/coef-plots/coef-plot-fold-1.rds"))
+# pc2 <- readRDS(paste0(path_to_model_folder, "/coef-plots/coef-plot-fold-2.rds"))
+# pc3 <- readRDS(paste0(path_to_model_folder, "/coef-plots/coef-plot-fold-3.rds"))
+# pc4 <- readRDS(paste0(path_to_model_folder, "/coef-plots/coef-plot-fold-4.rds"))
+# pc5 <- readRDS(paste0(path_to_model_folder, "/coef-plots/coef-plot-fold-5.rds"))
+# 
+# l <- list(pc1,pc2,pc3,pc4,pc5)
+# ggarrange(plotlist = l, ncol = 3, nrow = 2,
+#          common.legend = TRUE)
 ```
 
 The plots displays the nonzero coefficients in each fold computed
@@ -303,22 +303,6 @@ plot(a,res)
 qqnorm(res)
 qqline(res)
 plot(density(res))
-```
-
-```{r}
 acf(res)
-Box.test(res, lag=20, type="Ljung-Box")
 ```
-```{r}
-plot.ts(res)
-```
-```{r}
-pacf(res)
-```
-
-
-```{r}
-plot(hist(res))
-```
-
 
